Kubernetes/Samples/5_Services_apachedeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: apache-deploy
   labels:
    app: apache-deploy
spec:
   replicas: 3
   selector:
     matchLabels:
      app: apache-webserver
   template:
     metadata:
       labels:
         app: apache-webserver
     spec:
       containers: 
       - name: apache
         image: bitnami/apache:latest
         ports:
         - containerPort: 80
